--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,6 +1,6 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/TopDown/Maps/TopDownMap.TopDownMap
-EditorStartupMap=/Game/TopDown/Maps/TopDownMap.TopDownMap
+EditorStartupMap=/Game/VS/Levels/InGame.InGame
 GlobalDefaultGameMode="/Script/VampireSurvivors.VampireSurvivorsGameMode"
 
 [/Script/Engine.RendererSettings]
